# actor

./: .gitignore  ADDRESSES  main.py  pyproject.toml  readme.md
actor/: __init__.py  context.py  tools.py
actor/handler/: __init__.py  abc.py  auto.py
actor/response/: __init__.py  abc.py  default.py  html.py
static/: hello.txt
welcome/: app.py
