[tool.poetry]
name = "actor"
version = "0.1.0"
description = ""
authors = ["timoniq"]

[tool.poetry.dependencies]
python = "^3.8"
uvicorn = "^0.17.6"
aiofiles = "^0.8.0"
Jinja2 = "^3.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
